--- a/src/main/resources/knowledgetest/application/log-in-screen.fxml
+++ b/src/main/resources/knowledgetest/application/log-in-screen.fxml
@@ -6,23 +6,15 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="438.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.LogInScreen">
+<AnchorPane prefHeight="365.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.LogInScreen">
    <children>
-      <VBox layoutX="180.0" layoutY="118.0" prefHeight="160.0" prefWidth="323.0" spacing="40.0" style="-fx-background-color: beige;">
+      <VBox layoutX="114.0" layoutY="94.0" prefHeight="160.0" prefWidth="323.0" spacing="40.0" style="-fx-background-color: beige;">
          <children>
-            <TextField fx:id="login" promptText="Введите логин">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </TextField>
-            <TextField fx:id="password" promptText="Введите пароль">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </TextField>
+            <TextField fx:id="login" promptText="Введите логин" />
+            <TextField fx:id="password" promptText="Введите пароль" />
          </children>
          <opaqueInsets>
             <Insets />
@@ -31,23 +23,30 @@
             <Insets bottom="30.0" left="20.0" right="20.0" top="30.0" />
          </padding>
       </VBox>
-      <Label layoutX="249.0" layoutY="60.0" text="Войдите в учетную запись" />
-      <HBox layoutX="183.0" layoutY="302.0" prefHeight="51.0" prefWidth="323.0" spacing="85.0">
-         <children>
-            <Button fx:id="logInButton" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#checkEnteredData" text="Войти">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Button fx:id="toLogUpButton" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#goToRegistration" text="Зарегистрироваться">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
-         </padding>
-      </HBox>
+      <Label fx:id="logInLabel" layoutX="155.0" layoutY="34.0" text="Войдите в учетную запись">
+         <font>
+            <Font name="Bookman Old Style" size="18.0" />
+         </font></Label>
+      <Button fx:id="logInButton" alignment="CENTER" layoutX="114.0" layoutY="274.0" mnemonicParsing="false" onMouseClicked="#checkEnteredData" text="Войти">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="Bookman Old Style" size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="toLogUpButton" alignment="CENTER" contentDisplay="RIGHT" layoutX="273.0" layoutY="274.0" mnemonicParsing="false" onMouseClicked="#goToRegistration" text="Зарегистрироваться">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="Bookman Old Style" size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="changePasswordButton" disable="true" layoutX="214.0" layoutY="311.0" mnemonicParsing="false"  opacity="0.0" text="Сменить пароль">
+         <font>
+            <Font name="Baskerville Old Face" size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
