--- a/src/main/resources/knowledgetest/application/log-in-screen.fxml
+++ b/src/main/resources/knowledgetest/application/log-in-screen.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="365.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.LogInScreen">
+<AnchorPane prefHeight="365.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.LogInScreen">
    <children>
       <VBox layoutX="114.0" layoutY="94.0" prefHeight="160.0" prefWidth="323.0" spacing="40.0" style="-fx-background-color: beige;">
          <children>
@@ -43,7 +40,7 @@
             <Font name="Bookman Old Style" size="14.0" />
          </font>
       </Button>
-      <Button fx:id="changePasswordButton" disable="true" layoutX="214.0" layoutY="311.0" mnemonicParsing="false"  opacity="0.0" text="Сменить пароль">
+      <Button fx:id="changePasswordButton" disable="true" layoutX="214.0" layoutY="311.0" mnemonicParsing="false" onMouseClicked="#changePasswordAction" opacity="0.0" text="Сменить пароль">
          <font>
             <Font name="Baskerville Old Face" size="14.0" />
          </font>
