--- a/src/main/resources/knowledgetest/application/lk.fxml
+++ b/src/main/resources/knowledgetest/application/lk.fxml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="knowledgetest.application.frontend.controllers.Lk"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="440.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.Lk">
+   <children>
+      <TabPane prefHeight="440.0" prefWidth="650.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab closable="false" text="Личные данные">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TextField fx:id="passwordField" editable="false" layoutX="447.0" layoutY="105.0" promptText="Пароль" />
+                        <TextField fx:id="emailField" editable="false" layoutX="250.0" layoutY="105.0" promptText="Почта" />
+                        <TextField fx:id="nameField" editable="false" layoutX="42.0" layoutY="32.0" promptText="Имя" />
+                        <TextField fx:id="groupField" editable="false" layoutX="42.0" layoutY="105.0" promptText="Группа" />
+                        <TextField fx:id="patronymicField" editable="false" layoutX="447.0" layoutY="32.0" promptText="Отчество" />
+                        <TextField fx:id="surnameField" editable="false" layoutX="250.0" layoutY="32.0" promptText="Фамилия" />
+                        <Button fx:id="activeFieldsButton" layoutX="42.0" layoutY="346.0" mnemonicParsing="false" onMouseClicked="#activeFields" text="Изменить данные">
+                           <font>
+                              <Font name="Bookman Old Style" size="14.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="saveChangesButton" disable="true" layoutX="421.0" layoutY="346.0" mnemonicParsing="false" onMouseClicked="#saveChanges" text="Сохранить изменения">
+                           <font>
+                              <Font name="Bookman Old Style" size="14.0" />
+                           </font>
+                        </Button>
+                        <Button layoutX="256.0" layoutY="346.0" mnemonicParsing="false" onMouseClicked="#remoteUserButton" text="Удалить аккаунт">
+                           <font>
+                              <Font name="Bookman Old Style" size="14.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+   </children>
 </AnchorPane>
