a new package responsible for generating javafx objects has been introduced, the administrator's functionality for blocking the user and assigning the user role has been implemented

--- a/src/main/resources/knowledgetest/application/lk.fxml
+++ b/src/main/resources/knowledgetest/application/lk.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane prefHeight="440.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.Lk">
    <children>
-      <TabPane prefHeight="440.0" prefWidth="650.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="lkTabPane" prefHeight="440.0" prefWidth="650.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab closable="false" text="Личные данные">
             <content>
