--- a/src/main/resources/knowledgetest/application/home-screen.fxml
+++ b/src/main/resources/knowledgetest/application/home-screen.fxml
@@ -6,5 +6,6 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.HomeScreen">
    <children>
       <Button fx:id="lkButton" layoutX="478.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#goToLK" text="Личный кабинет" />
+      <Button fx:id="qbButton" layoutX="478.0" layoutY="64.0" mnemonicParsing="false" onMouseClicked="#goToQB" text="К базе вопросов" />
    </children>
 </AnchorPane>
