--- a/src/main/resources/knowledgetest/application/question-base-screen.fxml
+++ b/src/main/resources/knowledgetest/application/question-base-screen.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="knowledgetest.application.frontend.controllers.QuestionBaseScreen"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.QuestionBaseScreen">
+   <children>
+      <AnchorPane fx:id="sectionsPane" layoutX="24.0" layoutY="29.0" prefHeight="316.0" prefWidth="544.0" />
+      <Button fx:id="goToHomeButton" layoutX="519.0" layoutY="360.0" mnemonicParsing="false" onMouseClicked="#goToHome" text="Назад" />
+      <Button layoutX="24.0" layoutY="360.0" mnemonicParsing="false" onMouseClicked="#createSectionButton" text="Создать новый раздел" />
+   </children>
 </AnchorPane>
