--- a/src/main/resources/knowledgetest/application/question-base-screen.fxml
+++ b/src/main/resources/knowledgetest/application/question-base-screen.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.QuestionBaseScreen">
    <children>
-      <AnchorPane fx:id="sectionsPane" layoutX="24.0" layoutY="29.0" prefHeight="316.0" prefWidth="544.0" />
       <Button fx:id="goToHomeButton" layoutX="519.0" layoutY="360.0" mnemonicParsing="false" onMouseClicked="#goToHome" text="Назад" />
       <Button layoutX="24.0" layoutY="360.0" mnemonicParsing="false" onMouseClicked="#createSectionButton" text="Создать новый раздел" />
+      <AnchorPane fx:id="sectionsPane" layoutX="28.0" layoutY="32.0" prefHeight="298.0" prefWidth="540.0" />
+      <Label fx:id="header" layoutX="284.0" layoutY="14.0" />
    </children>
 </AnchorPane>
