--- a/src/main/resources/knowledgetest/application/question-section-screen.fxml
+++ b/src/main/resources/knowledgetest/application/question-section-screen.fxml
@@ -8,7 +8,7 @@
 <AnchorPane prefHeight="400.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.QuestionSectionScreen">
    <children>
       <ScrollPane fx:id="scrollContainer" layoutX="22.0" layoutY="33.0" prefHeight="322.0" prefWidth="803.0" />
-      <Button layoutX="22.0" layoutY="361.0" mnemonicParsing="false" text="Создать новый вопрос" />
+      <Button layoutX="22.0" layoutY="361.0" mnemonicParsing="false" onMouseClicked="#createQuestion" text="Создать новый вопрос" />
       <Label fx:id="header" layoutX="410.0" layoutY="14.0" />
       <Button layoutX="773.0" layoutY="361.0" mnemonicParsing="false" onMouseClicked="#backWindow" text="Назад" />
    </children>
