--- a/src/main/resources/knowledgetest/application/home-screen.fxml
+++ b/src/main/resources/knowledgetest/application/home-screen.fxml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="knowledgetest.application.frontend.controllers.HomeScreen">
    <children>
-      <Button fx:id="lkButton" layoutX="478.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#goToLK" text="Личный кабинет" />
-      <Button fx:id="qbButton" layoutX="478.0" layoutY="64.0" mnemonicParsing="false" onMouseClicked="#goToQB" text="К базе вопросов" />
+      <ButtonBar fx:id="standardBtnBar" layoutX="136.0" layoutY="62.0" prefHeight="40.0" prefWidth="440.0">
+         <buttons>
+            <Button fx:id="lkButton" mnemonicParsing="false" onMouseClicked="#goToLK" prefHeight="26.0" prefWidth="108.0" text="Личный кабинет" />
+            <Button fx:id="qbButton" mnemonicParsing="false" onMouseClicked="#goToQB" prefHeight="23.0" prefWidth="108.0" text="К базе вопросов" />
+            <Button fx:id="primalTestButton" mnemonicParsing="false" onMouseClicked="#testSwitchMode" prefHeight="18.0" prefWidth="108.0" text="Пройти тест" />
+         </buttons>
+      </ButtonBar>
+      <ButtonBar fx:id="testBtnBar" disable="true" layoutX="136.0" layoutY="277.0" opacity="0.0" prefHeight="40.0" prefWidth="440.0">
+        <buttons>
+            <Button fx:id="homeBackButton" mnemonicParsing="false" text="Назад" />
+        </buttons>
+      </ButtonBar>
    </children>
 </AnchorPane>
